<resources>
    <string name="app_name">آل نشوان</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_title">العنوان</string>
    <string name="dummy_desc">العنوان</string>
    <string name="home">الرئيسية</string>
    <string name="news">الاخبار</string>
    <string name="gallery">المكتبة</string>
    <string name="profile">حسابي</string>
    <string name="family_tree">شجرة العائلة</string>
    <string name="welcome">مرحبا</string>
    <string name="how_r_u">كيف حالك ؟</string>
    <string name="persons">الشخصيات</string>
    <string name="relations">النسب</string>
    <string name="TODAY">اليوم</string>
    <string name="server_error">يوجد تحديثات في السيرفر ، يمكنك استخدام التطبيق في وقت اخر</string>
    <string name="all">All</string>
    <string name="tam_wellah_alhamed_zawag">تم ولله الحمد زواج</string>
    <string name="groom">الزوج</string>
    <string name="bride">الزوجة</string>
    <string name="pics">الصور</string>
    <string name="barak_all_lahoma">بارك الله لهما وبارك عليهما وجمع بينهما في خير</string>
    <string name="videos">الفيديوهات</string>
    <string name="download_high_res">تحميل الملف بجودة عالية</string>
    <string name="descent_family">نسب العائلة</string>
    <string name="my_info">معلوماتي الشخصية</string>
    <string name="add_born">إضافة مولود</string>
    <string name="dead">إضافة حالة وفاة</string>
    <string name="scientific_certifications">الشهادات العلمية</string>
    <string name="sign_in">تسجيل الدخول</string>
    <string name="new_account">حساب جديد</string>
    <string name="phone_number">رقم الجوال</string>
    <string name="confirm">تأكيد</string>
    <string name="download_success">التحميل تم بنجاح</string>
    <string name="name">الاسم</string>
    <string name="code_inside_family">الكود بالعائلة</string>
    <string name="birth_date">تاريخ الميلاد</string>
    <string name="whatsapp_number">رقم الواتساب</string>
    <string name="twitter_link">رابط تويتر</string>
    <string name="save_edits">حفظ التعديلات</string>
    <string name="instagram_link">رقم انستجرام</string>
    <string name="send">إرسال</string>
    <string name="add_new_born_hit_page">ملحوظة : سيتم استقبال الطلب من قبل المسؤولين وسيتم إضافتة الى شجرة العائلة بعد مراجعتها</string>
    <string name="add_death__hit_page">ملحوظة : سيتم استقبال الطلب من قبل المسؤولين وسيتم تحديث شجرة العائلة بعد مراجعتها</string>
    <string name="add_death">إضافة حالة وفاة</string>
    <string name="order_sent">تم استقبال الطلب بنجاح</string>
    <string name="there_is_no_file_to_download_right_now">لا يوجد ملف للتحميل في الوقت الحالي</string>
    <string name="death_case_name">اسم المتوفي</string>
    <string name="job">الوظيفة</string>
    <string name="edits_finished">تم التعديل</string>
    <string name="edit">تعديل</string>
    <string name="press_here_to_upload">أضغط هنا لارفاق صورة للشهادة الخاصة بك</string>
    <string name="edit_scientific_cert">تعديل الشهادات العلمية</string>
    <string name="perrmission_denied">لا يمكننا تشغيل هذه الخدمة الا بالموافقة علي الاذن</string>
    <string name="cant_use_image">لا يمكننا استخدام هذا الملف</string>
    <string name="error">error</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="welcome_on_alnashwan">مرحبا بك في تطبيق آل نشوان</string>
    <string name="error_when_opening_the_link">لا يمكن فتح هذا الرابط</string>
    <string name="Issue_when_open_the_file">يوجد خطا في فتح الملف</string>
    <string name="are_you_sure_you_wna_remove">هل انت متأكد من حذف هذة الشهادة الان ؟</string>
    <string name="welcome_to">مرحبا بكم في</string>
    <string name="app_for_a_family">تطبيق شجرة عائلة</string>
    <string name="title_activity_exo_player">ExoPlayerActivity</string>

    <string name="i_have_read_and_agree_to">لقد قرأت وأوافق على</string>
    <string name="termsandcondition">الشروط والاحكام</string>
    <string name="continue_">استمرار</string>

    <string name="u_have_to_accept_to_continue">يجب عليك الموافقة على الشروط والاحكام للاستمرار</string>
    <string name="live_stream">بث مباشر</string>
    <string name="watch_now">شاهد الان</string>
    <string name="notAvailable">غير متاح الان</string>
    <string name="death_date">تاريخ الوفاة</string>
    <string name="mobile">الجوال</string>
    <string name="msg">الرسالة</string>
    <string name="message_sent">Message Sent</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="settings">الاعدادات</string>
    <string name="contacts_info">معلومات التواصل</string>
    <string name="mn_nahn">من نحن ؟</string>
    <string name="title_activity_maps">Maps</string>
    <string name="place_address_on_map">العنوان على الخريطة</string>
    <string name="burrial_place">مكان الدفن</string>
    <string name="drag_the_icon_to_your_location">اسحب الخريطة حتى الوصول الى المكان</string>
    <string name="done">تم</string>
    <string name="hint">ملحوظة</string>
    <string name="close">اغلاق</string>
    <string name="u_have_to_enable_location">يجب عليك تفعيل  تحديد الموقع</string>
    <string name="search">البحث</string>
    <string name="write_3_ch_at_least">أكتب على الاقل ثلاثة حروف</string>
    <string name="t_search">البحث</string>
    <string name="my_orders">طلباتي</string>
    <string name="relations_sel">صلة القرابة</string>
    <string name="order_state">حالة الطلب</string>
    <string name="death_cases">الوفيات</string>
    <string name="new_borns">الولادة</string>
    <string name="birth_date_">تاريخ الولادة</string>
    <string name="mother_name">اسم الام</string>
    <string name="address">العنوان</string>
    <string name="hint_About_me">نبذة عني</string>
    <string name="certificates">الشهادات</string>
    <string name="mother_name_">اسم الام :</string>
    <string name="job_">الوظيفة :</string>
    <string name="address_">العنوان :</string>
    <string name="about_">نبذة :</string>
    <string name="fb_link">رابط الفيس بوك</string>
    <string name="are_u_sure_u_want_to_logout">\" هل تريد الخروج من الحساب ؟\"</string>
 <string name="are_u_sure_u_want_to_completly_remove_account">\" هل تريد حذف الحساب نهائيا؟\"</string>
    <string name="delete_account">حذف الحساب</string>

</resources>