<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background_main"
    tools:context=".ui.auth.AuthFragment">

    <ImageView
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:src="@drawable/image_logo"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/main_font_bold"
        android:text="@string/app_for_a_family" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/main_font_bold"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/text_to_signin"
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"

        android:background="@drawable/background_rectangle_round"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white" />

    <TextView

        android:id="@+id/text_to_signup"
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/background_squere_fillet25_stroke"
        android:gravity="center"
        android:text="@string/new_account"
        android:textColor="@color/colorAccent" />
</LinearLayout>
